fix: card back on ios test#1

--- a/assets/css/gamestyle.css
+++ b/assets/css/gamestyle.css
@@ -287,10 +287,12 @@ body{
 }
 
 .card.vis .card-back{
+ -webkit-transform: rotateY(-180deg);
  transform: rotateY(-180deg);
  
 }
 .card.vis .card-front{
+   -webkit-transform: rotateY(0);
  transform: rotateY(0);
  border: 1px solid yellow;
  box-shadow: 5px 5px rgb(17, 20, 204); /*adds a shadow when card is flipped */
